<resources>
    <string name="app_name">BooksApp</string>
    <string name="my_books">My books</string>
    <string name="find_a_book">Find a book</string>
    <string name="cover">Cover</string>
    <string name="add_book">Add book</string>
    <string name="basic_book_info">&lt;b>%1$s&lt;/b> - &lt;i>%2$s&lt;/i></string>
    <string name="pages_numbering">%1d pages</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="action_delete_book">Delete book</string>
    <string name="action_filter">Filter Results</string>
    <string name="date_format">Publication: %1s</string>
    <string name="search_hint">Book Info - eg. "Harry Potter"</string>
    <string name="search_desc">Search: </string>
    <string name="search_header">Google Books Results</string>
    <string name="rating">Rating:</string>
    <string name="pages_read">Pages read</string>
    <string name="status">Status:</string>
    <string name="cover_button">Add Cover</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_desc">Channel for book notifications.</string>
    <string name="filter_title">Search by</string>
</resources>