<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityBook"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="2dp"
        />

    <Button
        android:id="@+id/add_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cover_button"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pages_read" />

        <ImageButton
            android:id="@+id/book_minus_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/minus_thick"
            android:contentDescription="@string/minus" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/input_page"
            android:autofillHints=""
            android:inputType="number"
            tools:ignore="LabelFor" />

        <ImageButton
            android:id="@+id/book_plus_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plus_thick"
            android:contentDescription="@string/plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/status"
            android:gravity="center"
            />

        <Spinner
            android:id="@+id/spinner_status"
            style="@android:style/Widget.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rating" />

        <Spinner
            android:id="@+id/spinner_rating"
            style="@android:style/Widget.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal | bottom">



    </LinearLayout>



</LinearLayout>